Minikubestuff/jack-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jacks
spec:
  sessionAffinity: ClientIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: jacks
